--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "pnpm": ">=7"
   },
   "devDependencies": {
-    "@arkweid/lefthook": "^0.7.7"
+    "@arkweid/lefthook": "^0.7.7",
+    "@commitlint/cli": "^16.3.0",
+    "@commitlint/config-conventional": "^16.2.4"
   }
 }
