--- a/package.json
+++ b/package.json
@@ -5,10 +5,6 @@
   "repository": "github:vanyauhalin/swapi-searcher",
   "author": "Ivan Uhalin <vanyauhalin@gmail.com>",
   "type": "module",
-  "engines": {
-    "node": ">=18",
-    "pnpm": ">=7"
-  },
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.7",
     "@commitlint/cli": "^16.3.0",
@@ -17,7 +13,13 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
     "@vanyauhalin/eslint-config-react": "^0.10.0",
+    "@vitejs/plugin-react": "^1.3.2",
     "eslint": "^8.15.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "vite": "^2.9.9"
+  },
+  "engines": {
+    "node": ">=18",
+    "pnpm": ">=7"
   }
 }
