--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,8 +34,8 @@
     "target": "es2022"
   },
   "include": [
-    "src/*.ts",
-    "src/*.tsx",
+    "src/**/*.ts",
+    "src/**/*.tsx",
     "vite.config.js"
   ]
 }
