--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vitejs/plugin-react": "^1.3.2",
     "eslint": "^8.15.0",
     "typescript": "^4.6.4",
+    "typescript-plugin-css-modules": "^3.4.0",
     "vite": "^2.9.9"
   },
   "engines": {
