--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,3 +1,13 @@
 {
-  "extends": "@vanyauhalin/stylelint-config-base"
+  "extends": "@vanyauhalin/stylelint-config-base",
+  "rules": {
+    "property-no-unknown": [
+      true,
+      {
+        "ignoreProperties": [
+          "composes"
+        ]
+      }
+    ]
+  }
 }
