chore: set unicorn/no-null warn for *.tsx

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,12 @@
       "rules": {
         "import/no-default-export": "off"
       }
+    },
+    {
+      "files": "*.tsx",
+      "rules": {
+        "unicorn/no-null": "warn"
+      }
     }
   ]
 }
