refactor: clean code via new rules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "noEmit": true,
     "plugins": [
       {
-        "name": "typescript-plugin-css-modules",
+        "name": "typescript-plugin-css-modules"
       }
     ],
     "allowSyntheticDefaultImports": true,
