--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,35 @@
       "rules": {
         "unicorn/no-null": "warn"
       }
+    },
+    {
+      "files": "*.d.ts",
+      "rules": {
+        "max-classes-per-file": "off"
+      }
+    },
+    {
+      "files": "*.json",
+      "rules": {
+        "max-len": "off"
+      }
     }
-  ]
+  ],
+  "rules": {
+    "no-restricted-syntax": [
+      "error",
+      {
+        "selector": "ForInStatement",
+        "message": "for..in loops iterate over the entire prototype chain, which is virtually never what you want. Use Object.{keys,values,entries}, and iterate over the resulting array."
+      },
+      {
+        "selector": "LabeledStatement",
+        "message": "Labels are a form of GOTO; using them makes code confusing and hard to maintain and understand."
+      },
+      {
+        "selector": "WithStatement",
+        "message": "`with` is disallowed in strict mode because it makes code impossible to predict and optimize."
+      }
+    ]
+  }
 }
