--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,12 @@
     }
   ],
   "rules": {
+    "no-param-reassign": [
+      "error",
+      {
+        "props": false
+      }
+    ],
     "no-restricted-syntax": [
       "error",
       {
