chore: update eslint-config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,51 +5,21 @@
   },
   "overrides": [
     {
-      "files": "vite.config.js",
-      "rules": {
-        "import/no-default-export": "off"
-      }
-    },
-    {
-      "files": "*.tsx",
-      "rules": {
-        "unicorn/no-null": "warn"
-      }
-    },
-    {
       "files": "*.d.ts",
       "rules": {
-        "max-classes-per-file": "off"
-      }
-    },
-    {
-      "files": "*.json",
-      "rules": {
-        "max-len": "off"
+        "max-len": [
+          "error",
+          {
+            "code": 120,
+            "ignoreComments": true,
+            "ignoreRegExpLiterals": true,
+            "ignoreStrings": false,
+            "ignoreTemplateLiterals": true,
+            "ignoreUrls": true,
+            "tabWidth": 2
+          }
+        ]
       }
     }
-  ],
-  "rules": {
-    "no-param-reassign": [
-      "error",
-      {
-        "props": false
-      }
-    ],
-    "no-restricted-syntax": [
-      "error",
-      {
-        "selector": "ForInStatement",
-        "message": "for..in loops iterate over the entire prototype chain, which is virtually never what you want. Use Object.{keys,values,entries}, and iterate over the resulting array."
-      },
-      {
-        "selector": "LabeledStatement",
-        "message": "Labels are a form of GOTO; using them makes code confusing and hard to maintain and understand."
-      },
-      {
-        "selector": "WithStatement",
-        "message": "`with` is disallowed in strict mode because it makes code impossible to predict and optimize."
-      }
-    ]
-  }
+  ]
 }
