--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Ivan Uhalin <vanyauhalin@gmail.com>",
   "type": "module",
   "scripts": {
-    "lint": "eslint .",
+    "lint": "eslint . && stylelint src/**/*.css",
     "serve": "vite"
   },
   "dependencies": {
@@ -22,7 +22,7 @@
     "@types/node": "^17.0.33",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
-    "@vanyauhalin/eslint-config-react": "^0.18.0",
+    "@vanyauhalin/eslint-config-react": "^0.19.0",
     "@vanyauhalin/stylelint-config-base": "^0.4.4",
     "@vitejs/plugin-react": "^1.3.2",
     "eslint": "^8.15.0",
