--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,13 +1,19 @@
 {
   "extends": "@vanyauhalin/stylelint-config-base",
-  "rules": {
-    "property-no-unknown": [
-      true,
-      {
-        "ignoreProperties": [
-          "composes"
-        ]
+  "overrides": [
+    {
+      "files": "*.module.css",
+      "rules": {
+        "property-no-unknown": [
+          true,
+          {
+            "ignoreProperties": [
+              "composes"
+            ]
+          }
+        ],
+        "selector-class-pattern": "^[A-Z][a-zA-Z0-9]+$"
       }
-    ]
-  }
+    }
+  ]
 }
