chore: add composes to ignore for value-keyword-case

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -12,7 +12,13 @@
             ]
           }
         ],
-        "selector-class-pattern": "^[A-Z][a-zA-Z0-9]+$"
+        "selector-class-pattern": "^[A-Z][a-zA-Z0-9]+$",
+        "value-keyword-case": [
+          "lower",
+          {
+            "ignoreProperties": "composes"
+          }
+        ]
       }
     }
   ]
